# project-hub

./: .gitignore  README.md  render.yaml  vercel.json
backend/: .env.example  .gitignore  addTestFrameworkData.js  add_test_framework_data.sql  checkSlugs.ts  createTestUser.js  fix_difficulty.sql  package-lock.json  package.json  setup-prisma.sh  start.sh  (+5 more)
backend-python/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  railway.json  test_auth.py  test_db.py  test_domains.py  test_domains2.py
backend-python/alembic/: env.py
backend-python/alembic/versions/: 32143cf0314b_add_project_type_to_github_projects.py  a09440b522c1_initial_schema.py  bf8d5f5801e1_add_bookmark_model.py  e3a4c72bb3e1_add_github_social_and_project_requirements.py  f1c2d3e4a5b6_make_social_project_links_nullable.py
backend-python/output/: project-candidates.json
backend-python/scripts/: find_projects.py  sync_github.py
backend-python/src/: main.py
backend-python/src/api/: dependencies.py
backend-python/src/api/routes/: __init__.py  analytics.py  auth.py  domains.py  gamification.py  github_projects.py  learning_paths.py  notifications.py  projects.py  social.py  user.py  workspace.py
backend-python/src/core/: config.py  database.py  security.py
backend-python/src/models/: __init__.py  base.py  project.py  social.py  tracking.py  user.py
backend-python/src/schemas/: project.py  social.py  tracking.py  user.py
backend-python/src/services/: ai_service.py  github_project_scraper.py
backend-python/tests/: conftest.py  test_main.py  test_user.py
(+243 files in other folders)
